app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 80
