app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
