path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: daws82s.online
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: svc-app1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: svc-app2
            port:
              number: 80
